--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  file_picker: ^8.1.1
   flutter:
     sdk: flutter
   syncfusion_flutter_pdfviewer: ^26.2.9
