--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   file_picker: ^8.1.1
   flutter:
     sdk: flutter
+  loading_animation_widget: ^1.2.1
   syncfusion_flutter_pdfviewer: ^26.2.9
 
 dev_dependencies:
